[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "pardner"
version = "0.0.1"
description = "Python library for authorizing access and fetching personal data from portability APIs and services"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "oauthlib>=3.3.1",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "types-requests-oauthlib>=2.0.0.20250516",
]
